k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: hr-portal
spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: enterprise-hr-portal-kubernetes-backend:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          startupProbe:
            httpGet:
              path: /employees
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 18

          readinessProbe:
            httpGet:
              path: /employees
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /employees
              port: 8080
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: hr-portal
spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - port: 8080
      targetPort: 8080
